# libfishsound

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.win32  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  fishsound.pc.in  mkinstalldirs
debian/: changelog  control  libfishsound1.files  rules  watch
doc/: Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in
doc/libfishsound/html/: annotated.html  constants_8h-source.html  constants_8h.html  files.html  fishsound_8h-source.html  fishsound_8h.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__about.html  group__building.html  group__configuration.html  group__configure.html  group__install.html  group__installation.html  index.html  modules.html  structFishSoundFormat.html  structFishSoundInfo.html  struct__FishSoundInfo.html
doc/libfishsound/latex/: annotated.tex  constants_8h.tex  doxygen.sty  files.tex  fishsound_8h.aux  fishsound_8h.tex  group__about.tex  group__building.aux  group__building.tex  group__configuration.tex  group__configure.tex  group__install.aux  group__installation.tex  index.tex  modules.tex  refman.aux  refman.dvi  refman.idx  refman.ilg  refman.ind  refman.ps  refman.tex  refman.toc  structFishSoundFormat.tex  structFishSoundInfo.aux  structFishSoundInfo.tex  struct__FishSoundInfo.tex
include/: Makefile.in
include/fishsound/: Makefile.am  Makefile.in  comments.h  constants.h  decode.h  deprecated.h  encode.h  fishsound.h
release_notes/: libfishsound-0.7.0.txt
src/: Makefile.am  Makefile.in
src/examples/: Makefile.am  Makefile.in  decode.c  encode.c  fishsound-decenc.c  fishsound-decode.c  fishsound-encdec.c  fishsound-encode.c  fishsound-identify.c  fishsound-info.c  identify.c
src/libfishsound/: Makefile.am  Makefile.in  Version_script.in  comments.c  convert.h  debug.h  decode.c  encode.c  fishsound.c  flac.c  fs_compat.h  fs_vector.c  private.h  speex.c  vorbis.c
src/tests/: Makefile.am  Makefile.in  comment-test.c  encdec-audio.c  encdec-comments.c  noop.c
src/tools/: Makefile.in  decode.c  encode.c  identify.c
symbian/: bld.inf  config.h  libfishsound.mmp
win32/: Makefile  config.h  decode.dsp  encode.dsp  identify.dsp  libfishsound.dsp  libfishsound.dsw
win32/libfishsound/: decode.vcproj  encode.vcproj  identify.vcproj  libfishsound.def  libfishsound.dsp  libfishsound.dsw  libfishsound.sln  libfishsound.vcproj
